VERSION SVN (0.2.0)

	* Added constants for transactions states in 
	class.tx_paymentlib_provider.php

	* Added a tceform itemProcFunc function for displaying payment details in
	records.
		Function: itemsProcFunc_paymentDetails ($PA, $fobj)

    * Made reference a required field. If not applicable on your payment method,
    create an unique value eg. from (micro)time stamp.
    	Function: transaction_getResults ($reference)
    	Field: $transactionDetailsArr['options']['reference']

	* Altered function getTransactionsByExtKey() according to new database
	fields

    * Altered database table to reflect the common values of a transaction and a
    more non-gateway specific naming. 
        CREATE TABLE tx_paymentlib_transactions (

        	-- Standard Typo3 fields
            id int(11) UNSIGNED NOT NULL auto_increment,
            pid int(11) UNSIGNED DEFAULT '0' NOT NULL,
            crdate int(11) UNSIGNED DEFAULT '0' NOT NULL,
            
            -- Typically an unique identification of the transaction returned by
            -- gateway. Used for capture, reversal etc.
            gatewayid varchar(255) NOT NULL,
            
            -- A unique identification of the transaction by your own choise. If
            -- not applicapable in your gateway, just use some autogenerated
            -- unique value
            reference varchar(255) DEFAULT '0' NOT NULL,
            
            -- The currency ISO3 value (eg. 'EUR' for Euro)
            currency varchar(3) DEFAULT '' NOT NULL,
            
            -- The amount in the smallest possible unit (eg. 1.00 EUR = 100)
            amount bigint(64) UNSIGNED DEFAULT 0 NOT NULL,
            
            -- Referes to constants defined in class.tx_paymentlib_provider.php
            state int(3) UNSIGNED DEFAULT '0' NOT NULL,
            
            -- The timestamp returned by gateway. MUST be an Unix timestamp
            state_time int(11) UNSIGNED DEFAULT '0' NOT NULL,
            