@@ -1,5 +1,10 @@
 VERSION SVN (0.2.0)
 
+	* Add to new abstract functions, which can be used for adding extra
+	functionality to the payment form (see paymentlib_offline for example):
+		abstract public function transaction_formGetFormParms ()
+		abstract public function transaction_formGetSubmitParms ()
+
 	* Added constants for transactions states in 
 	class.tx_paymentlib_provider.php
 
